<resources>
    <string name="app_name">ProdApp</string>

    <!-- Navigation Bar -->
    <string name="calendar_icon_name">Calendar</string>
    <string name="inbox_icon_name">Inbox</string>
    <string name="profile_icon_name">Profile</string>
    <string name="setting_icon_name">Setting</string>


    <!-- Sign In/Sign Up/Sign Out -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="confirm_password_hint">Re-enter Password</string>

    <string name="todo_list_icon_name">List</string>

    <string name="new_item">New Item</string>

    <!--Todolist -->
    <string name="todo_title">Title</string>
    <string name="todo_detail">Detail</string>
    <string name="todo_select_date">Select Date</string>
    <string name="todo_add">Add</string>
    <string name="todo_update">Update</string>


    <!--list item -->
    <string name="camera">Capture</string>
    <string name="checkbox_list">Mark as done</string>


    <!--settings -->
    <string name="setting_signout">SIGN OUT</string>

    <!--calendar -->
    <string name="prev_calendar">prev</string>
    <string name="next_calendar">next</string>
    <string name="init_march">Mar 2025</string>

    <!--calendar days -->
    <string name="monday">MON</string>
    <string name="tuesday">TUES</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <string name="calendar_todo">Todo Items On:</string>


    <!--calendar item -->
    <string name="calendar_item_title">CalendarItemTitle</string>
    <string name="calendar_item_desc">CalendarItemDesc</string>

    <string name="calendar_things_todo_on">Things to do on</string>
    <string name="calendar_things_please">Please Select a Date</string>


    <!--character -->
    <string name="character_level">Level</string>
    <string name="character_xp">XP</string>
    <string name="character_health">Health</string>
    <string name="character_strength">Strength</string>

    <string name="character_adventure">Adventure</string>


    <string name="adventure_dragon">You fought a dragon and won!</string>
    <string name="adventure_goblin">You fought a goblin and lost! You are useless!</string>
    <string name="adventure_gold">You fought a gold mine! Yay :)</string>
    <string name="adventure_useless">You achieved nothing and was useless!</string>


    <string name="character_gained_text">You gained</string>





</resources>