<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/prevMonthButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev_calendar"
            android:textColor="@color/black"
            android:background="@null"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="1dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/init_march" />

        <Button
            android:id="@+id/nextMonthButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_calendar"
            android:textColor="@color/black"
            android:background="@null"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="303dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/dateSelectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/calendar_todo" />
        <TextView
            android:id="@+id/dateSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>