<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment">

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/emailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="300dp"/>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title"/>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>